c_func/y.output
Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: WHILE_STATEMENT
    2        | IF_STATEMENT

    3 WHILE_STATEMENT: WHILE LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS BLOCK

    4 IF_STATEMENT: IF LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS BLOCK

    5 BLOCK: STATEMENT
    6      | LEFT_BRACE STATEMENT_LIST RIGHT_BRACE

    7 STATEMENT_LIST: STATEMENT
    8               | STATEMENT_LIST STATEMENT
    9               | IF_STATEMENT
   10               | WHILE_STATEMENT

   11 STATEMENT: EXPRESSION SEMICOLON
   12          | TYPENAME VARIABLE_LIST SEMICOLON

   13 VARIABLE_LIST: IDENTIFIER
   14              | VARIABLE_LIST COMMA IDENTIFIER

   15 EXPRESSION: TERM
   16           | LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS
   17           | EXPRESSION OPERATOR TERM

   18 TERM: INTEGER
   19     | REAL
   20     | HEXADECIMAL
   21     | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
LEFT_PARENTHESIS (258) 3 4 16
RIGHT_PARENTHESIS (259) 3 4 16
LEFT_BRACE (260) 6
RIGHT_BRACE (261) 6
SEMICOLON (262) 11 12
COMMA (263) 14
IF (264) 4
OPERATOR (265) 17
TYPENAME (266) 12
INTEGER (267) 18
REAL (268) 19
HEXADECIMAL (269) 20
IDENTIFIER (270) 13 14 21
WHILE (271) 3


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
PROGRAM (18)
    on left: 1 2, on right: 0
WHILE_STATEMENT (19)
    on left: 3, on right: 1 10
IF_STATEMENT (20)
    on left: 4, on right: 2 9
BLOCK (21)
    on left: 5 6, on right: 3 4
STATEMENT_LIST (22)
    on left: 7 8 9 10, on right: 6 8
STATEMENT (23)
    on left: 11 12, on right: 5 7 8
VARIABLE_LIST (24)
    on left: 13 14, on right: 12 14
EXPRESSION (25)
    on left: 15 16 17, on right: 3 4 11 16 17
TERM (26)
    on left: 18 19 20 21, on right: 15 17


state 0

    0 $accept: . PROGRAM $end

    IF     shift, and go to state 1
    WHILE  shift, and go to state 2

    PROGRAM          go to state 3
    WHILE_STATEMENT  go to state 4
    IF_STATEMENT     go to state 5


state 1

    4 IF_STATEMENT: IF . LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS BLOCK

    LEFT_PARENTHESIS  shift, and go to state 6


state 2

    3 WHILE_STATEMENT: WHILE . LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS BLOCK

    LEFT_PARENTHESIS  shift, and go to state 7


state 3

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 8


state 4

    1 PROGRAM: WHILE_STATEMENT .

    $default  reduce using rule 1 (PROGRAM)


state 5

    2 PROGRAM: IF_STATEMENT .

    $default  reduce using rule 2 (PROGRAM)


state 6

    4 IF_STATEMENT: IF LEFT_PARENTHESIS . EXPRESSION RIGHT_PARENTHESIS BLOCK

    LEFT_PARENTHESIS  shift, and go to state 9
    INTEGER           shift, and go to state 10
    REAL              shift, and go to state 11
    HEXADECIMAL       shift, and go to state 12
    IDENTIFIER        shift, and go to state 13

    EXPRESSION  go to state 14
    TERM        go to state 15


state 7

    3 WHILE_STATEMENT: WHILE LEFT_PARENTHESIS . EXPRESSION RIGHT_PARENTHESIS BLOCK

    LEFT_PARENTHESIS  shift, and go to state 9
    INTEGER           shift, and go to state 10
    REAL              shift, and go to state 11
    HEXADECIMAL       shift, and go to state 12
    IDENTIFIER        shift, and go to state 13

    EXPRESSION  go to state 16
    TERM        go to state 15


state 8

    0 $accept: PROGRAM $end .

    $default  accept


state 9

   16 EXPRESSION: LEFT_PARENTHESIS . EXPRESSION RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 9
    INTEGER           shift, and go to state 10
    REAL              shift, and go to state 11
    HEXADECIMAL       shift, and go to state 12
    IDENTIFIER        shift, and go to state 13

    EXPRESSION  go to state 17
    TERM        go to state 15


state 10

   18 TERM: INTEGER .

    $default  reduce using rule 18 (TERM)


state 11

   19 TERM: REAL .

    $default  reduce using rule 19 (TERM)


state 12

   20 TERM: HEXADECIMAL .

    $default  reduce using rule 20 (TERM)


state 13

   21 TERM: IDENTIFIER .

    $default  reduce using rule 21 (TERM)


state 14

    4 IF_STATEMENT: IF LEFT_PARENTHESIS EXPRESSION . RIGHT_PARENTHESIS BLOCK
   17 EXPRESSION: EXPRESSION . OPERATOR TERM

    RIGHT_PARENTHESIS  shift, and go to state 18
    OPERATOR           shift, and go to state 19


state 15

   15 EXPRESSION: TERM .

    $default  reduce using rule 15 (EXPRESSION)


state 16

    3 WHILE_STATEMENT: WHILE LEFT_PARENTHESIS EXPRESSION . RIGHT_PARENTHESIS BLOCK
   17 EXPRESSION: EXPRESSION . OPERATOR TERM

    RIGHT_PARENTHESIS  shift, and go to state 20
    OPERATOR           shift, and go to state 19


state 17

   16 EXPRESSION: LEFT_PARENTHESIS EXPRESSION . RIGHT_PARENTHESIS
   17           | EXPRESSION . OPERATOR TERM

    RIGHT_PARENTHESIS  shift, and go to state 21
    OPERATOR           shift, and go to state 19


state 18

    4 IF_STATEMENT: IF LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS . BLOCK

    LEFT_PARENTHESIS  shift, and go to state 9
    LEFT_BRACE        shift, and go to state 22
    TYPENAME          shift, and go to state 23
    INTEGER           shift, and go to state 10
    REAL              shift, and go to state 11
    HEXADECIMAL       shift, and go to state 12
    IDENTIFIER        shift, and go to state 13

    BLOCK       go to state 24
    STATEMENT   go to state 25
    EXPRESSION  go to state 26
    TERM        go to state 15


state 19

   17 EXPRESSION: EXPRESSION OPERATOR . TERM

    INTEGER      shift, and go to state 10
    REAL         shift, and go to state 11
    HEXADECIMAL  shift, and go to state 12
    IDENTIFIER   shift, and go to state 13

    TERM  go to state 27


state 20

    3 WHILE_STATEMENT: WHILE LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS . BLOCK

    LEFT_PARENTHESIS  shift, and go to state 9
    LEFT_BRACE        shift, and go to state 22
    TYPENAME          shift, and go to state 23
    INTEGER           shift, and go to state 10
    REAL              shift, and go to state 11
    HEXADECIMAL       shift, and go to state 12
    IDENTIFIER        shift, and go to state 13

    BLOCK       go to state 28
    STATEMENT   go to state 25
    EXPRESSION  go to state 26
    TERM        go to state 15


state 21

   16 EXPRESSION: LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS .

    $default  reduce using rule 16 (EXPRESSION)


state 22

    6 BLOCK: LEFT_BRACE . STATEMENT_LIST RIGHT_BRACE

    LEFT_PARENTHESIS  shift, and go to state 9
    IF                shift, and go to state 1
    TYPENAME          shift, and go to state 23
    INTEGER           shift, and go to state 10
    REAL              shift, and go to state 11
    HEXADECIMAL       shift, and go to state 12
    IDENTIFIER        shift, and go to state 13
    WHILE             shift, and go to state 2

    WHILE_STATEMENT  go to state 29
    IF_STATEMENT     go to state 30
    STATEMENT_LIST   go to state 31
    STATEMENT        go to state 32
    EXPRESSION       go to state 26
    TERM             go to state 15


state 23

   12 STATEMENT: TYPENAME . VARIABLE_LIST SEMICOLON

    IDENTIFIER  shift, and go to state 33

    VARIABLE_LIST  go to state 34


state 24

    4 IF_STATEMENT: IF LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS BLOCK .

    $default  reduce using rule 4 (IF_STATEMENT)


state 25

    5 BLOCK: STATEMENT .

    $default  reduce using rule 5 (BLOCK)


state 26

   11 STATEMENT: EXPRESSION . SEMICOLON
   17 EXPRESSION: EXPRESSION . OPERATOR TERM

    SEMICOLON  shift, and go to state 35
    OPERATOR   shift, and go to state 19


state 27

   17 EXPRESSION: EXPRESSION OPERATOR TERM .

    $default  reduce using rule 17 (EXPRESSION)


state 28

    3 WHILE_STATEMENT: WHILE LEFT_PARENTHESIS EXPRESSION RIGHT_PARENTHESIS BLOCK .

    $default  reduce using rule 3 (WHILE_STATEMENT)


state 29

   10 STATEMENT_LIST: WHILE_STATEMENT .

    $default  reduce using rule 10 (STATEMENT_LIST)


state 30

    9 STATEMENT_LIST: IF_STATEMENT .

    $default  reduce using rule 9 (STATEMENT_LIST)


state 31

    6 BLOCK: LEFT_BRACE STATEMENT_LIST . RIGHT_BRACE
    8 STATEMENT_LIST: STATEMENT_LIST . STATEMENT

    LEFT_PARENTHESIS  shift, and go to state 9
    RIGHT_BRACE       shift, and go to state 36
    TYPENAME          shift, and go to state 23
    INTEGER           shift, and go to state 10
    REAL              shift, and go to state 11
    HEXADECIMAL       shift, and go to state 12
    IDENTIFIER        shift, and go to state 13

    STATEMENT   go to state 37
    EXPRESSION  go to state 26
    TERM        go to state 15


state 32

    7 STATEMENT_LIST: STATEMENT .

    $default  reduce using rule 7 (STATEMENT_LIST)


state 33

   13 VARIABLE_LIST: IDENTIFIER .

    $default  reduce using rule 13 (VARIABLE_LIST)


state 34

   12 STATEMENT: TYPENAME VARIABLE_LIST . SEMICOLON
   14 VARIABLE_LIST: VARIABLE_LIST . COMMA IDENTIFIER

    SEMICOLON  shift, and go to state 38
    COMMA      shift, and go to state 39


state 35

   11 STATEMENT: EXPRESSION SEMICOLON .

    $default  reduce using rule 11 (STATEMENT)


state 36

    6 BLOCK: LEFT_BRACE STATEMENT_LIST RIGHT_BRACE .

    $default  reduce using rule 6 (BLOCK)


state 37

    8 STATEMENT_LIST: STATEMENT_LIST STATEMENT .

    $default  reduce using rule 8 (STATEMENT_LIST)


state 38

   12 STATEMENT: TYPENAME VARIABLE_LIST SEMICOLON .

    $default  reduce using rule 12 (STATEMENT)


state 39

   14 VARIABLE_LIST: VARIABLE_LIST COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 40


state 40

   14 VARIABLE_LIST: VARIABLE_LIST COMMA IDENTIFIER .

    $default  reduce using rule 14 (VARIABLE_LIST)
